Added the Javaparser by refactoring the LeafNode and RelationshipIdentifier classes to have two subclasses, one for each parser that we use and implemented the ProjectParserHelper to create the corresponding LeafNode and RelationshipIdentifier classes based on the ParserType